# save-the-king-game

./: README.txt
ex2/: CMakeLists.txt  main.cpp
ex2.xcodeproj/: project.pbxproj
ex2.xcodeproj/xcshareddata/xcschemes/: ex2.xcscheme
ex2.xcodeproj/xcuserdata/yaakovhaimoff.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ex2.xcodeproj/xcuserdata/yaakovhaimoff.xcuserdatad/xcschemes/: xcschememanagement.plist
ex2/include/: Board.hpp  CMakeLists.txt  Controller.hpp  King.hpp  Location.hpp  Mage.hpp  Player.hpp  Thief.hpp  Tile.hpp  Warrior.hpp  gamesTools.hpp
ex2/rcs/: CMakeLists.txt  Level1  Level1.txt  Level2  Level3  Levels  Levels.txt
ex2/src/: Board.cpp  CMakeLists.txt  Controller.cpp  King.cpp  Mage.cpp  Player.cpp  Thief.cpp  Tile.cpp  Warrior.cpp  main.cpp
ex2/yaakov/ex2/: README.txt.txt
ex2/yaakov/ex2/include/: Board.hpp  Controller.hpp  Warrior.hpp
ex2/yaakov/ex2/src/: Board.cpp  King.cpp  Location.cpp  Mage.cpp  Warrior.cpp
